comment content and post content overflow fixed

--- a/static/css/general.css
+++ b/static/css/general.css
@@ -10,6 +10,7 @@
   font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   color: var(--themePrimary);
+  overflow-wrap: break-word !important;
 }
 
 html {
